<resources>
    <string name="app_name">Sahabat Gula</string>
    <string name="web_client_id">464451948482-20f4cotg5hlkgqqsa5j2gdpp3e9646v8.apps.googleusercontent.com</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logo_sahabat_gula">Logo Sahabat Gula</string>
    <string name="sahabat_gula">Sahabat Gula</string>
    <string name="pantau_konsumsi_gula_harianmu">Pantau Konsumsi Gula Harianmu</string>
    <string name="login_title">Mulai Hari Ini Lebih Sehat</string>
    <string name="login_subtitle">Login untuk mulai memantau konsumsi gula harian Anda dengan lebih mudah</string>
    <string name="google_subtitle">Lanjutkan dengan Google</string>
    <string name="logo_google">Logo Google</string>
    <string name="or_separator">Atau</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="login">Login</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="username">Username</string>
    <string name="text_checkbox_register"><![CDATA[Saya menyetujui Syarat & Ketentuan serta Kebijakan Privasi Sahabat Gula]]></string>
    <string name="register">Register</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="title_register">Langkah Kecil Berdampak</string>
    <string name="subtitle_register">Mari bergabung bersama Sahabat Gula untuk hidup yang lebih sehat</string>
    <string name="warning_password"><![CDATA[Gunakan minimal 8 karakter, huruf besar & kecil, angka, dan simbol.]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_input_gender">Pilih Jenis Kelamin</string>
    <string name="gender_icon">Ikon gender</string>
    <string name="subtitle_input_gender">Kebutuhan kalori harian dan faktor risiko diabetes juga dipengaruhi oleh jenis kelamin</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="age_value">140</string>
    <string name="age_format">cm</string>
    <string name="age_center_marker">Age Center Marker</string>
    <string name="title_input_height">Tinggimu Berapa?</string>
    <string name="subtitle_input_height">Tinggi badan dibutuhkan untuk menghitung kalori harian dan indeks massa tubuh</string>
    <string name="title_scan">Pindai</string>
    <string name="title_explore">Jelajahi</string>
    <string name="title_setting">Pengaturan</string>

    <string name="event_desc">
        Dalam rangka memperingati Hari Diabetes Nasional, Universitas Mataram mengadakan kegiatan edukatif bertajuk "Mengenali Risiko Diabetes Sejak Dini". Acara ini dirancang untuk meningkatkan kesadaran masyarakat terhadap pentingnya deteksi dini risiko diabetes sebagai langkah preventif menjaga kesehatan jangka panjang.\n
        Peserta akan mendapatkan kesempatan untuk:\n
        \u2022 Pemeriksaan gula darah gratis\n
        \u2022 Konsultasi langsung dengan ahli gizi dan tenaga medis\n
        \u2022 Edukasi seputar gaya hidup sehat dan pola makan yang dianjurkan\n
        \u2022 Sesi tanya jawab interaktif\n
        \u2022 Pembagian leaflet edukatif dan doorprize menarik\n
        Acara ini terbuka untuk umum dan tidak dipungut biaya. Cocok untuk masyarakat umum, pelajar, pekerja, dan lansia yang ingin lebih memahami risiko diabetes sejak dini dan bagaimana langkah-langkah pencegahannya.
    </string>
    <string name="resend_in_30_secs">Kirim ulang dalam %1$d detik</string>
    <string name="otp_resend_ready">Kirim ulang kode</string>
    <string name="subtitle_input_weight">Kami juga menggunakan data ini untuk menghitung kebutuhan kalori</string>
    <string name="title_weight_input">Beratmu Berapa?</string>
    <string name="number_selected_weight">19</string>
    <string name="format_kg_weight">kg</string>
    <string name="search_result_subtitle">
        <![CDATA[Kami berhasil menemukan beberapa pilihan untuk kata kunci <b>"%1$s"</b>]]>
    </string>


</resources>