<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingHorizontal="16dp"
    tools:context=".ui.auth.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="105dp"
            android:contentDescription="@string/logo_sahabat_gula"
            android:src="@drawable/ic_sahabat_gula_app"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="24sp"
            android:textColor="@color/md_theme_onSurface"
            android:textStyle="bold"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textSize="16sp"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            tools:ignore="TextContrastCheck"
            android:fontFamily="@font/jakarta_sans_family"
            android:layout_marginBottom="24dp"/>

        <include
            android:id="@+id/comp_sign_in_with_google"
            layout="@layout/component_google_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="24dp"/>

        <include
            layout="@layout/component_or_separator" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:startIconDrawable="@drawable/ic_mail"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:importantForAutofill="yes"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:importantForAutofill="yes"
                android:hint="@string/password"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="right"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:paddingVertical="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/plus_jakarta_sans_medium"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/jakarta_sans_family"/>

            <TextView
                android:id="@+id/tv_register_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:text="@string/register_now"
                android:textColor="@color/md_theme_primary"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>