<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.auth.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_medium"
            android:text="@string/title_register"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_register"
            android:textSize="14sp"
            android:gravity="center"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="2sp"
            tools:ignore="TextContrastCheck"
            android:fontFamily="@font/jakarta_sans_family"
            android:layout_marginBottom="24dp"/>

        <include
            layout="@layout/component_google_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="24dp"/>

        <include
            layout="@layout/component_or_separator" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:startIconDrawable="@drawable/icon_person"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/username"
                    android:importantForAutofill="yes"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout >


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:startIconDrawable="@drawable/icon_mail"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:importantForAutofill="yes"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:startIconDrawable="@drawable/icon_lock"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_error_password"
                app:endIconTint="@color/red_error"
                app:boxStrokeColor="@color/red_error"
                app:boxStrokeErrorColor="@color/red_error">

                <!-- untuk custom warning ketika error dilakukan pada logic ui -->
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:importantForAutofill="yes"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_checkbox_register"
                android:layout_marginTop="18dp"
                android:textSize="12sp"
                android:layout_marginStart="-5.1dp"
                android:letterSpacing="0.03"
                app:layout_constraintStart_toStartOf="@+id/input_password_register"
                app:layout_constraintTop_toBottomOf="@+id/input_password_register"
                tools:ignore="VisualLintButtonSize" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/register"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/plus_jakarta_sans_medium"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/jakarta_sans_family"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:text="@string/login"
                android:textColor="@color/md_theme_primary"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>