<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="46dp"
    tools:context=".ui.auth.register.inputdatauser.heavy.InputDataUserHeavyFragment">

    <TextView
        android:id="@+id/title_input_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:text="@string/title_weight_input"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/subtitle_input_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jakarta_sans_family"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="2sp"
        android:text="@string/subtitle_input_weight"
        android:textSize="14sp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/title_input_weight"
        app:layout_constraintStart_toStartOf="@id/title_input_weight"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle_input_weight"
        tools:ignore="RtlSymmetry"
        tools:layout_editor_absoluteX="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_weight"
            android:layout_width="100dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:clipToPadding="false"
            tools:listitem="@layout/item_weight" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_center_number"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/md_theme_primary"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp"
            app:strokeColor="@color/shadow_box"
            app:strokeWidth="4dp">

            <TextView
                android:id="@+id/tv_selected_weight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="@string/number_selected_weight"
                android:textColor="@color/md_theme_onPrimary"
                android:textSize="50sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jakarta_sans_family"
        android:text="@string/format_kg_weight"
        android:textSize="24sp"
        android:textColor="@color/number_format"
        android:textStyle="bold"
        android:layout_marginEnd="66dp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <Button
        android:id="@+id/btn_continue_to_waist_circumference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/lanjutkan"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
