<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.splashscreen.SplashScreenFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="123.4dp"
            android:layout_height="163.12dp"
            android:contentDescription="@string/logo_sahabat_gula"
            android:src="@drawable/ic_sahabat_gula_app"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_medium"
            android:text="@string/sahabat_gula"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pantau_konsumsi_gula_harianmu"
            android:textColor="#989898"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>