<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/valueContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/rulerContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:id="@+id/tv_height_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_value"
            android:textColor="#006B5F"
            android:textSize="57sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_age_format"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:text="@string/age_format"
            android:paddingStart="8dp"
            android:textColor="#5D6A85"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/rulerContainer"
        android:layout_width="0dp"
        android:layout_height="144dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valueContainer">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ruler_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:layout_marginTop="60dp"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            tools:listitem="@layout/item_ruler"/>

        <ImageView
            android:id="@+id/age_center_marker"
            android:layout_width="24dp"
            android:layout_height="144dp"
            android:layout_gravity="center"
            android:contentDescription="@string/age_center_marker"
            android:src="@drawable/ic_ruler_center" />
    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>